--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,6 +11,12 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Java
         uses: actions/setup-java@v3
+      - name: Set Environment Variables
+        env:
+          POSTGRES_URL: ${{secrets.POSTGRES_URL}}
+          POSTGRES_USERNAME: ${{secrets.POSTGRES_USERNAME}}
+          POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
+        run: mvn clean
         with:
           distribution: 'temurin'
           java-version: '17'
@@ -22,13 +28,10 @@ jobs:
         run: docker build -t ulvusuleymanov1/edadi .
       - name: Publish image to docker hub
         run: docker push ulvusuleymanov1/edadi:latest
-
   deploy:
     needs: build
     runs-on: [aws-ec2]
     steps:
-      - name: Delete old container
-        run: docker run -d --name elasticsearch1 -p 9200:9200 -p 9300:9300 -e "discovery.type=single-node" docker.elastic.co/elasticsearch/elasticsearch:7.14.0
       - name: Pull Image from docker hub
         run: sudo docker pull ulvusuleymanov1/edadi:latest
       - name: Delete old container
