--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,10 @@
         <version>3.2.0-SNAPSHOT</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.edauni</groupId>
-    <artifactId>edauni</artifactId>
+    <groupId>az.edadi</groupId>
+    <artifactId>edadi</artifactId>
     <version>0.0.1</version>
-    <name>fresh</name>
+    <name>Edadi</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>17</java.version>
