implements reels service

--- a/src/main/resources/properties/h2-properties.yml
+++ b/src/main/resources/properties/h2-properties.yml
@@ -6,7 +6,7 @@ spring:
     driverClassName: org.h2.Driver
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
     showSql: true
   h2:
     console:
