--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,12 @@
             <version>8.5.9</version>
         </dependency>
 
+          <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.12.729</version>
+        </dependency>
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
